test/errors/alignment_error/zs/field_alignment_error.zs
package field_alignment_error;

struct FieldAlignmentError
{
    bit:3 alignment;
align(alignment):
    int32 field;
};
